plugins/opensearch-iouring/dist/native/include/opensearch_iouring.h

/* ============================================================================
 * Ring Management
 * ============================================================================ */

/**
 * Opaque ring handle.
 */
typedef struct osur_ring osur_ring_t;
/* ============================================================================
 * I/O Submission
 *
 * These functions prepare I/O operations. Operations are not sent to the
 * kernel until osur_submit() is called.
 * ============================================================================ */

/**
 * Submit a read operation.
 *
 * @param ring       The ring
 * @param fd         File descriptor to read from
 * @param buf        Buffer to read into
 * @param len        Number of bytes to read
 * @param offset     File offset to read from
 * @param user_data  User data returned with completion (for request tracking)
 * @return 0 on success, -EAGAIN if SQ is full, other negative on error
 */
int osur_submit_read(osur_ring_t* ring,
                     int fd,
                     void* buf,
                     uint32_t len,
                     uint64_t offset,
                     uint64_t user_data);
/**
 * Submit a write operation.
 *
 * @param ring       The ring
 * @param fd         File descriptor to write to
 * @param buf        Buffer containing data to write
 * @param len        Number of bytes to write
 * @param offset     File offset to write to
 * @param user_data  User data returned with completion
 * @return 0 on success, -EAGAIN if SQ is full, other negative on error
 */
int osur_submit_write(osur_ring_t* ring,
                      int fd,
                      const void* buf,
                      uint32_t len,
                      uint64_t offset,
                      uint64_t user_data);
/**
 * Submit a read operation using a registered file descriptor.
 *
 * @param ring       The ring
 * @param fd_index   Index of the registered file descriptor
 * @param buf        Buffer to read into
 * @param len        Number of bytes to read
 * @param offset     File offset to read from
 * @param user_data  User data returned with completion
 * @return 0 on success, negative error code on failure
 */
int osur_submit_read_registered(osur_ring_t* ring,
                                uint32_t fd_index,
                                void* buf,
                                uint32_t len,
                                uint64_t offset,
                                uint64_t user_data);
/**
 * Submit a write operation using a registered file descriptor.
 */
int osur_submit_write_registered(osur_ring_t* ring,
                                 uint32_t fd_index,
                                 const void* buf,
                                 uint32_t len,
                                 uint64_t offset,
                                 uint64_t user_data);
/**
 * Submit a read using both registered file and buffer.
 * This is the most optimized path.
 *
 * @param ring       The ring
 * @param fd_index   Index of the registered file descriptor
 * @param buf_index  Index of the registered buffer
 * @param len        Number of bytes to read
 * @param offset     File offset to read from
 * @param user_data  User data returned with completion
 * @return 0 on success, negative error code on failure
 */
int osur_submit_read_fixed(osur_ring_t* ring,
                           uint32_t fd_index,
                           uint32_t buf_index,
                           uint32_t len,
                           uint64_t offset,
                           uint64_t user_data);