plugins/opensearch-iouring/src/main/generated/org/opensearch/index/store/iouring/ffi/opensearch_iouring_h.java


    private static class osur_submit_read {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            opensearch_iouring_h.C_INT,
            opensearch_iouring_h.C_POINTER,
            opensearch_iouring_h.C_INT,
            opensearch_iouring_h.C_POINTER,
            opensearch_iouring_h.C_INT,
            opensearch_iouring_h.C_LONG,
            opensearch_iouring_h.C_LONG
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("osur_submit_read");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int osur_submit_read(osur_ring_t *ring, int fd, void *buf, uint32_t len, uint64_t offset, uint64_t user_data)
     * }
     */
    public static FunctionDescriptor osur_submit_read$descriptor() {
        return osur_submit_read.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int osur_submit_read(osur_ring_t *ring, int fd, void *buf, uint32_t len, uint64_t offset, uint64_t user_data)
     * }
     */
    public static MethodHandle osur_submit_read$handle() {
        return osur_submit_read.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int osur_submit_read(osur_ring_t *ring, int fd, void *buf, uint32_t len, uint64_t offset, uint64_t user_data)
     * }
     */
    public static MemorySegment osur_submit_read$address() {
        return osur_submit_read.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int osur_submit_read(osur_ring_t *ring, int fd, void *buf, uint32_t len, uint64_t offset, uint64_t user_data)
     * }
     */
    public static int osur_submit_read(MemorySegment ring, int fd, MemorySegment buf, int len, long offset, long user_data) {
        var mh$ = osur_submit_read.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("osur_submit_read", ring, fd, buf, len, offset, user_data);
            }
            return (int)mh$.invokeExact(ring, fd, buf, len, offset, user_data);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class osur_submit_write {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            opensearch_iouring_h.C_INT,
            opensearch_iouring_h.C_POINTER,
            opensearch_iouring_h.C_INT,
            opensearch_iouring_h.C_POINTER,
            opensearch_iouring_h.C_INT,
            opensearch_iouring_h.C_LONG,
            opensearch_iouring_h.C_LONG
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("osur_submit_write");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int osur_submit_write(osur_ring_t *ring, int fd, const void *buf, uint32_t len, uint64_t offset, uint64_t user_data)
     * }
     */
    public static FunctionDescriptor osur_submit_write$descriptor() {
        return osur_submit_write.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int osur_submit_write(osur_ring_t *ring, int fd, const void *buf, uint32_t len, uint64_t offset, uint64_t user_data)
     * }
     */
    public static MethodHandle osur_submit_write$handle() {
        return osur_submit_write.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int osur_submit_write(osur_ring_t *ring, int fd, const void *buf, uint32_t len, uint64_t offset, uint64_t user_data)
     * }
     */
    public static MemorySegment osur_submit_write$address() {
        return osur_submit_write.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int osur_submit_write(osur_ring_t *ring, int fd, const void *buf, uint32_t len, uint64_t offset, uint64_t user_data)
     * }
     */
    public static int osur_submit_write(MemorySegment ring, int fd, MemorySegment buf, int len, long offset, long user_data) {
        var mh$ = osur_submit_write.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("osur_submit_write", ring, fd, buf, len, offset, user_data);
            }
            return (int)mh$.invokeExact(ring, fd, buf, len, offset, user_data);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class osur_submit_read_registered {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            opensearch_iouring_h.C_INT,
            opensearch_iouring_h.C_POINTER,
            opensearch_iouring_h.C_INT,
            opensearch_iouring_h.C_POINTER,
            opensearch_iouring_h.C_INT,
            opensearch_iouring_h.C_LONG,
            opensearch_iouring_h.C_LONG
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("osur_submit_read_registered");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int osur_submit_read_registered(osur_ring_t *ring, uint32_t fd_index, void *buf, uint32_t len, uint64_t offset, uint64_t user_data)
     * }
     */
    public static FunctionDescriptor osur_submit_read_registered$descriptor() {
        return osur_submit_read_registered.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int osur_submit_read_registered(osur_ring_t *ring, uint32_t fd_index, void *buf, uint32_t len, uint64_t offset, uint64_t user_data)
     * }
     */
    public static MethodHandle osur_submit_read_registered$handle() {
        return osur_submit_read_registered.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int osur_submit_read_registered(osur_ring_t *ring, uint32_t fd_index, void *buf, uint32_t len, uint64_t offset, uint64_t user_data)
     * }
     */
    public static MemorySegment osur_submit_read_registered$address() {
        return osur_submit_read_registered.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int osur_submit_read_registered(osur_ring_t *ring, uint32_t fd_index, void *buf, uint32_t len, uint64_t offset, uint64_t user_data)
     * }
     */
    public static int osur_submit_read_registered(MemorySegment ring, int fd_index, MemorySegment buf, int len, long offset, long user_data) {
        var mh$ = osur_submit_read_registered.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("osur_submit_read_registered", ring, fd_index, buf, len, offset, user_data);
            }
            return (int)mh$.invokeExact(ring, fd_index, buf, len, offset, user_data);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class osur_submit_write_registered {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            opensearch_iouring_h.C_INT,
            opensearch_iouring_h.C_POINTER,
            opensearch_iouring_h.C_INT,
            opensearch_iouring_h.C_POINTER,
            opensearch_iouring_h.C_INT,
            opensearch_iouring_h.C_LONG,
            opensearch_iouring_h.C_LONG
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("osur_submit_write_registered");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int osur_submit_write_registered(osur_ring_t *ring, uint32_t fd_index, const void *buf, uint32_t len, uint64_t offset, uint64_t user_data)
     * }
     */
    public static FunctionDescriptor osur_submit_write_registered$descriptor() {
        return osur_submit_write_registered.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int osur_submit_write_registered(osur_ring_t *ring, uint32_t fd_index, const void *buf, uint32_t len, uint64_t offset, uint64_t user_data)
     * }
     */
    public static MethodHandle osur_submit_write_registered$handle() {
        return osur_submit_write_registered.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int osur_submit_write_registered(osur_ring_t *ring, uint32_t fd_index, const void *buf, uint32_t len, uint64_t offset, uint64_t user_data)
     * }
     */
    public static MemorySegment osur_submit_write_registered$address() {
        return osur_submit_write_registered.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int osur_submit_write_registered(osur_ring_t *ring, uint32_t fd_index, const void *buf, uint32_t len, uint64_t offset, uint64_t user_data)
     * }
     */
    public static int osur_submit_write_registered(MemorySegment ring, int fd_index, MemorySegment buf, int len, long offset, long user_data) {
        var mh$ = osur_submit_write_registered.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("osur_submit_write_registered", ring, fd_index, buf, len, offset, user_data);
            }
            return (int)mh$.invokeExact(ring, fd_index, buf, len, offset, user_data);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class osur_submit_read_fixed {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            opensearch_iouring_h.C_INT,
            opensearch_iouring_h.C_POINTER,
            opensearch_iouring_h.C_INT,
            opensearch_iouring_h.C_INT,
            opensearch_iouring_h.C_INT,
            opensearch_iouring_h.C_LONG,
            opensearch_iouring_h.C_LONG
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("osur_submit_read_fixed");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int osur_submit_read_fixed(osur_ring_t *ring, uint32_t fd_index, uint32_t buf_index, uint32_t len, uint64_t offset, uint64_t user_data)
     * }
     */
    public static FunctionDescriptor osur_submit_read_fixed$descriptor() {
        return osur_submit_read_fixed.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int osur_submit_read_fixed(osur_ring_t *ring, uint32_t fd_index, uint32_t buf_index, uint32_t len, uint64_t offset, uint64_t user_data)
     * }
     */
    public static MethodHandle osur_submit_read_fixed$handle() {
        return osur_submit_read_fixed.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int osur_submit_read_fixed(osur_ring_t *ring, uint32_t fd_index, uint32_t buf_index, uint32_t len, uint64_t offset, uint64_t user_data)
     * }
     */
    public static MemorySegment osur_submit_read_fixed$address() {
        return osur_submit_read_fixed.ADDR;
    }
